[package]
name = "ld52"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.9.1", features = ["wayland"] }
bevy-inspector-egui = { path = "../bevy-inspector-egui/crates/bevy-inspector-egui" }
bevy_rapier2d = "0.19.0"
iyes_loopless = "0.9.1"
